--- a/frontend/src/components/DeleteModal/DeleteModal.module.css
+++ b/frontend/src/components/DeleteModal/DeleteModal.module.css
@@ -90,12 +90,17 @@
 }
 
 @media (max-width: 430px) {
+
+    .containerBackground {
+       width: 100%;
+    }
+
     .deleteModal { 
         width: 70vw;
         height: 17vh;
-        left: 45%;
-        transform: translate(-50%, -50%);
-        border-radius: 0.5em;
-        border: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+       
     }
 }
