--- a/frontend/src/components/TitleList/TitleList.module.css
+++ b/frontend/src/components/TitleList/TitleList.module.css
@@ -53,7 +53,7 @@
         top: 20vh;
         width: 90vw;
         height: 3vh;
-        left: 5vw;
+        left: 13.4vw;
         display: flex;
         justify-content: center;
         align-items: center;
