--- a/frontend/src/pages/Home/Dashboard.module.css
+++ b/frontend/src/pages/Home/Dashboard.module.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+.dashboardContainer {
+    background-color: #f8f8f8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1000;
+}
+
 .card {
     display: flex;
     flex-direction: row;
